# aquaman

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/aquaman/: aquaman.h
include/aquaman/channel/: abstract_channel.h  channel.h  channel_handler.h  channel_handler_context.h  channel_invoker.h  channel_pipeline.h  default_channel.h  default_channel_handler.h  default_channel_handler_context.h  default_channel_pipeline.h
include/aquaman/concurrent/: channel_future.h  channel_future_listener.h  channel_promise.h  default_channel_promise.h  event_executor.h  event_listener.h  future.h  generic_future_listener.h  promise.h  runnable.h
include/aquaman/event/: event.h  event_handler.h  generic_event.h  result.h
include/aquaman/schedule/: abstract_scheduler.h  default_scheduler.h  scheduler.h
include/aquaman/util/: util.h
pkg/: aquaman-config-version.cmake.in  aquaman-config.cmake.in
src/: main.cxx
src/channel/: CMakeLists.txt  channel_handler_context.cxx  default_channel_pipeline.cxx
src/concurrent/: CMakeLists.txt  event_executor.cxx
src/event/: CMakeLists.txt
src/math/: CMakeLists.txt
src/schedule/: CMakeLists.txt  scheduler.cxx
